--- a/style.css
+++ b/style.css
@@ -3,17 +3,17 @@
 *,
 *::before,
 *::after {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #333;
-  background-color: #f5f5f5;
+  color: #ddd;
+  background-color: #222;
 }
 
 header {
@@ -46,6 +46,7 @@ header h1 {
 }
 
 .form-input-filter {
+	color: #ddd;
   margin-top: 20px;
   width: 100%;
   font-size: 18px;
@@ -85,7 +86,7 @@ header h1 {
   width: 100%;
   font-size: 16px;
   background-color: transparent;
-  color: #333;
+  color: #ddd;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px 20px;
@@ -93,7 +94,7 @@ header h1 {
 }
 
 .btn-clear:hover {
-  background-color: #f1f1f1;
+  background-color: #333;
 }
 
 .text-red {
